# dogecoin-canister

./: .gitattributes  Cargo.toml  Dockerfile  INTERFACE_SPECIFICATION.md  README.md  canbench_results.yml  development-guide.md  dfx.json
.github/: CODEOWNERS
.github/workflows/: mdbook.yml  workflow.yml
benchmarks/: Cargo.toml  README.md
benchmarks/auxpow/: canbench.yml  canbench_results.yml
benchmarks/auxpow/src/: main.rs
benchmarks/legacy/: canbench.yml  canbench_results.yml  testnet_blocks_5k.txt
benchmarks/legacy/src/: main.rs
benchmarks/src/: README.md  main.rs  testnet_blocks.txt
bootstrap/: 1_download_state.sh  1_download_state_retry.sh  2_compute_unstable_blocks.sh  3_compute_block_headers.sh  4_compute_utxo_dump.sh  6_compute_canister_state.sh  README.md  check_chaintip.sh  utils.sh
bootstrap/canister-state-reader/: Cargo.toml  README.md
bootstrap/canister-state-reader/examples/: basic_usage.rs
bootstrap/canister-state-reader/src/: lib.rs  main.rs
bootstrap/state-builder/: Cargo.toml
bootstrap/state-builder/src/: build_address_utxos.rs  build_balances.rs  build_utxos.rs  main_state_builder.rs
bootstrap/state-reader/: Cargo.toml  README.md
bootstrap/state-reader/src/: hash.rs  lib.rs  main.rs
bootstrap/state-reader/tests/: integration_tests.rs
bootstrap/utxo-dump/: Cargo.toml  README.md
bootstrap/utxo-dump/src/: blockchain.rs  chainstate.rs  main.rs  serialization.rs  utils.rs  utxo.rs
bootstrap/utxo-dump/tests/: integration_tests.rs
bootstrap/utxo-dump/tests/test-data/: README.md
bootstrap/utxo-reader/: Cargo.toml  README.md
bootstrap/utxo-reader/examples/: basic_usage.rs
bootstrap/utxo-reader/src/: lib.rs  main.rs
canister/: Cargo.toml  candid.did
canister/proptest-regressions/: lib.txt  state.txt  validation.txt
canister/proptest-regressions/tests/: confirmation_counts.txt
canister/src/: address_utxoset.rs  block_header_store.rs  blocktree.rs  heartbeat.rs  lib.rs  main.rs  runtime.rs  state.rs  test_utils.rs  tests.rs  types.rs  unstable_blocks.rs  utxo_set.rs  validation.rs
canister/src/api/: fee_percentiles.rs  get_balance.rs  get_block_headers.rs  get_utxos.rs  metrics.rs  send_transaction.rs  set_config.rs
canister/src/blocktree/: serde.rs
canister/src/tests/: confirmation_counts.rs
canister/src/unstable_blocks/: blocks_cache.rs  next_block_headers.rs  outpoints_cache.rs
canister/src/utxo_set/: utxos.rs  utxos_delta.rs
canister/tests/: integration_tests.rs
deployment/mainnet/: canister_ids.json  dogecoin_canister_initial_upgrade_2025_10_17.md  dogecoin_canister_upgrade_2025_10_24.md
deployment/staging/: canister_ids.json  dfx.json
docs/: .gitignore  README.adoc  book.toml
docs/src/: SUMMARY.md  endpoints.md  environment.md  intro.md  read.md  regtest.md  transactions.md  workflow.md
docs/src/doge-transactions/: create_transactions.md  generate_address.md  sign_transactions.md  submit_transactions.md
e2e-tests/: bitcoin-canister-metadata.sh  charge-cycles-on-reject.sh  cycles_burn.sh  dfx.json  disable-api-if-not-fully-synced-flag.sh  post_upgrade_config.sh  reproducibility.sh  scenario-1.sh  scenario-2.sh  scenario-3.sh  set_config.sh  upgradability.sh  utils.sh
e2e-tests/disable-api-if-not-fully-synced-flag/: Cargo.toml
e2e-tests/disable-api-if-not-fully-synced-flag/src/: main.rs
e2e-tests/scenario-1/: Cargo.toml
e2e-tests/scenario-1/src/: main.rs
e2e-tests/scenario-2/: Cargo.toml  candid.did
e2e-tests/scenario-2/src/: main.rs
e2e-tests/scenario-3/: Cargo.toml  candid.did
e2e-tests/scenario-3/src/: main.rs
examples/basic_dogecoin/: Cargo.toml  Makefile  README.md  basic_dogecoin.did  dfx.json  dogecoin.conf  ord.yaml
examples/basic_dogecoin/src/: common.rs  ecdsa.rs  lib.rs  p2pkh.rs  service.rs
examples/basic_dogecoin/src/service/: get_balance.rs  get_block_headers.rs  get_current_fee_percentiles.rs  get_p2pkh_address.rs  get_utxos.rs  send_from_p2pkh_address.rs
interface/: Cargo.toml  README.md
interface/src/: lib.rs
interface/tests/: tests.rs
scripts/: build-canister.sh  canbench_ci_download_artifacts.sh  canbench_ci_post_run_benchmark.sh  canbench_ci_run_benchmark.sh  docker-build
test-utils/: Cargo.toml
test-utils/src/: lib.rs  simple_rng.rs
types/: Cargo.toml
types/src/: lib.rs
validation/: Cargo.toml
validation/proptest-regressions/header/: tests.txt
validation/src/: constants.rs  fixtures.rs  header.rs  lib.rs
validation/src/block/: mod.rs  tests.rs
validation/src/constants/: btc.rs  doge.rs
validation/src/header/: btc.rs  doge.rs  tests.rs
validation/src/header/tests/: btc.rs  doge.rs  utils.rs
validation/src/header/tests/doge/: auxpow.rs
validation/tests/data/: block_headers_mainnet_doge.csv  block_headers_testnet_doge.csv  headers_doge_1_5000.csv  headers_doge_testnet_1_5000.csv
validation/tests/data/btc/: headers_1_5000_testnet_parsed.csv
validation/tests/data/doge/: headers_0_15000_mainnet_raw.csv  headers_0_15000_testnet_raw.csv  headers_0_2000000_testnet_raw.csv  headers_0_700000_mainnet_raw.csv  headers_1_15000_mainnet_parsed.csv  headers_1_15000_testnet_parsed.csv
validation/tests/scripts/: extract_headers_doge.py
watchdog/: Cargo.toml  README.md
watchdog/src/: api_access.rs  lib.rs  metrics.rs  storage.rs
