[package]
name = "benchmarks"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "benchmarks"
path = "src/main.rs"
bench = false

[dependencies]
bitcoin = { workspace = true, features = ["serde"] }
canbench-rs = { workspace = true }
candid = { workspace = true }
hex = { workspace = true }
ic-doge-canister = { workspace = true, features = ["canbench-rs"] }
ic-doge-interface = { workspace = true }
ic-doge-test-utils = { workspace = true }
ic-doge-types = { workspace = true, features = ["btc"] }
ic-cdk = { workspace = true }
ic-cdk-macros = { workspace = true }
