[package]
name = "ic-doge-interface"
version = "0.1.0"
edition = "2021"
description = "Rust types for the Internet Computer's Dogecoin API."
homepage = "https://docs.rs/ic-doge-interface"
documentation = "https://docs.rs/ic-doge-interface"
license = "Apache-2.0"
include = ["src", "Cargo.toml", "../LICENSE", "README.md"]
repository = "https://github.com/dfinity/dogecoin-canister"
readme = "README.md"

[dependencies]
candid = { workspace = true }
datasize = { workspace = true }
serde = { workspace = true }
serde_bytes = { workspace = true }

[dev-dependencies]
ciborium = { workspace = true }
proptest = "1.0"
