[package]
name = "ic-doge-validation"
version = "0.1.0"
edition = "2021"
description = "Validation for Dogecoin Headers"
homepage = "https://docs.rs/ic-btc-validation"
documentation = "https://docs.rs/ic-btc-validation"
license = "Apache-2.0"
include = ["src", "Cargo.toml", "../LICENSE"]
repository = "https://github.com/dfinity/dogecoin-canister"

[dependencies]
bitcoin = { workspace = true }

[dev-dependencies]
csv = "1.1"
hex = { workspace = true }
proptest = "0.9.4"
