[package]
name = "state-reader"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "state-reader"
path = "src/main.rs"
required-features = ["file_memory"]

[dependencies]
clap = { workspace = true }
ic-stable-structures = { workspace = true }
ic-doge-types = { workspace = true, features = ["doge"] }
ic-doge-interface = { workspace = true }
ic-doge-canister = { workspace = true, optional = true }
sha2 = "0.10.8"
hex = { workspace = true }
separator = "0.4.1"

[dev-dependencies]
flate2 = "1.0"
tar = "0.4"
tempfile = "3.8"

[features]
default = ["ic-doge-canister"]
file_memory = ["ic-doge-canister/file_memory"]
