[package]
name = "utxo-dump"
version = "0.1.0"
edition = "2021"

[dependencies]
bitcoin = { workspace = true }
secp256k1 = "0.29"
clap = { version = "4.0", features = ["derive"] }
rusty-leveldb = "3.0"
csv = "1.3"
anyhow = "1.0"
signal-hook = "0.3"
hex = "0.4"
libc = "0.2.173"

[dev-dependencies]
sha2 = "0.10"
tempfile = "3.8"
flate2 = "1.0"
tar = "0.4"
